--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
 h1 {
   margin-top: 30px;
-  color: rgb(114, 82, 155);
+  color: #e0aaffb9;
   font-weight: bold;
+  text-shadow: 2px 2px 0px rgb(0, 0, 0);
 }
