--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,7 @@
 body {
+  text-align: center;
   margin: 0;
   font-family: "Courier New", Courier, monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #10002bf3;
-  color: #e0aaffd2;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
